--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <body>
         <img class="tulileft" src="media/tulipans.webp"/>
         <img class="tuliright" src="media/tulipans.webp"/>
-        <img class="xmas" src="media/xmas.webp"/>
-        <img class="hoe" src="media/hoeClaus.gif"/>
         <div class="heart">
         </div>
-        <div class="content"><h1>TE AMO</h1><h2>pero mucho</h2></div>
+        <div class="content"><h1>TE AMO</h1><h2>e we</h2></div>
+
+        <div class="letter">
+            <p> Hola mi amor, Te extraño y te amo, sepa que ando pensando <br>
+            en usted, en si está bien, como la pasará allá, pero se que usted <br>
+            puede pasar esta nueva etapa en su life, TE AMO </p>
+        </div>
     </body>
 </html>
